<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView android:id="@+id/titleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event_title"
            android:layout_margin="10dp"
            android:textSize="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_start_data_title" />
            <EditText android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.02.2012"
                android:ems="10"
                android:onClick="setStartDate"
                android:editable="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_start_data_title" />
            <EditText android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05:20"
                android:ems="10"
                android:onClick="setStartTime"
                android:editable="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_type_title" />
            <Spinner android:id="@+id/eventType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/realtor_event_type" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_duraction_title" />
            <EditText android:id="@+id/duractionTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05:20"
                android:ems="10"
                android:onClick="setDuractionTime"
                android:editable="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comment_title" />
            <EditText android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:onClick="save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>